# oss-sensor

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  setup.sh
backend/: Dockerfile  pyproject.toml
backend/oss_sensor/: __init__.py  cli.py  config.py  llm.py  llm_impl.py  main.py  models.py  scoring.py  storage.py
backend/oss_sensor/analyzers/: __init__.py  binary_diff.py  binary_features.py  log_correlation.py  r2_analysis.py  r2_features.py  source_diff.py
backend/oss_sensor/mcp/: __init__.py  __main__.py  server.py
backend/oss_sensor/reports/: __init__.py  generator.py
backend/oss_sensor/reverse/: __init__.py  frida_runner.py
backend/tests/: __init__.py  test_llm.py  test_schemas.py  test_scoring.py
demo/fixtures/binary_b1/: syslogd
demo/fixtures/binary_b2/: syslogd
demo/fixtures/source_b1/: README  parser.c
demo/fixtures/source_b2/: README  parser.c
docs/: architecture.md  reverse-engineering-setup.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  DiffDetailView.tsx  QueueView.tsx  api.ts  index.css  main.tsx
